Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
@%@~LICENSE:MIT~@%@

saw_072922_1 - A possible approach to multiple backends.

saw_072822_6 - Some window fun.

saw_072822_5 - Bump version for pip platform dependency test.

saw_072822_4 - Test commit (turned on GPG sign in Windows).

saw_072822_3 - Add Windows support to mouse test script.

saw_072822_2 - Add a mouse test script.

saw_072822_1 - Initial commit (just termio.py from my vipy project).
